@startuml
class User {
  - username: String
  - password: String
  - coins: int
  - elo: int
  + register()
  + login()
  + buyPackage()
  + defineDeck(Deck deck)
}

class Deck {
  - cards: List<Card>
  + addCard(Card card)
  + removeCard(Card card)
  + getBestCards(): List<Card>
}

abstract class Card {
  - name: String
  - damage: double
  - elementType: ElementType
  + attack(): double
}

class MonsterCard {
  + attack(): double
}

enum ElementType {
  FIRE
  WATER
  NORMAL
}

User "1" -- "1" Deck
Deck "1" -- "*" Card
Card <|-- MonsterCard
Card --> ElementType : elementType
@enduml
